changed to render

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,5 +42,5 @@ jobs:
         curl -X POST \
         -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
         -H "Content-Type: application/json" \
-        -d '{"serviceId": "test-python-project"}' \
+        -d '{"serviceId": "srv-ct34ec5umphs73dobmlg"}' \
         https://api.render.com/deploy
